--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,2 +1,7 @@
-#Wed Dec 05 19:39:51 MST 2018
+#Wed Dec 05 20:46:23 MST 2018
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
+execution.default.webUi.enablePageLoadTimeout=false
+execution.default.webUi.pageLoadTimeout=30
+execution.default.webUi.ignorePageLoadTimeOutException=false
+execution.default.webUi.actionDelay=0
+execution.default.waitForIEHanging=600
