Successful final test run on Browserstack with listing 3

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,19 +1,21 @@
-#Wed Dec 05 20:46:23 MST 2018
+#Thu Dec 06 23:20:12 MST 2018
 execution.default.executionConfiguration="Chrome"
 execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
 execution.default.quitDriversAfterExecutingTestCase=false
 execution.default.quitDriversAfterExecutingTestSuite=true
 mailConfig.encryptionEnabled=false
-mailConfig.host=""
-mailConfig.port=""
-mailConfig.username=""
-mailConfig.password=""
-mailConfig.securityProtocol="None"
+mailConfig.host="smtp.gmail.com"
+mailConfig.port="465"
+mailConfig.username="jayupadhyay13@gmail.com"
+mailConfig.password="SyecipWoudnowf9"
+mailConfig.securityProtocol="SSL"
 mailConfig.attachment=false
 mailConfig.subject="Katalon Summary Report"
 mailConfig.cc=""
 mailConfig.bcc=""
-mailConfig.reportRecipients=""
-mailConfig.reportFormat="[\\n  \\"CSV\\",\\n  \\"HTML\\"\\n]"
+mailConfig.reportRecipients="jayupadhyay13@gmail.com"
+mailConfig.reportFormat="[\\n  \\"HTML\\",\\n  \\"CSV\\"\\n]"
 mailConfig.sendReportTestFailedOnly=false
+report.takeScreenshotOption=true
+report.videoRecorderOption="{\\n  \\"enable\\"\: true,\\n  \\"videoFormat\\"\: \\"AVI\\",\\n  \\"videoQuality\\"\: \\"HIGH\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: true\\n}"
